5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1716_2504.log
== TEST (2019-05-09 16:21:09) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de cópias do vírus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

while (l < 2*v):
	vs = vs + (v*pv/100)
	leu = l + (l*pl/100)
	dia = dia + 1
print(dia)	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:31) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

while (l < 2*v):
	vs = vs + (v*pv/100)
	leu = l + (l*pl/100)
	dia = dia + 1
print(dia)	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:24:22) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

vs = vs + ((v*(pv/100))
leu = l + (l*(pl/100))
dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- ERROR:
File "XXXX", line 12
    leu = l + (l*(pl/100))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:24:54) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

vs = vs + ((v*(pv/100))
leu = leu + (l*(pl/100))
dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- ERROR:
File "XXXX", line 12
    leu = leu + (l*(pl/100))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:25:20) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

vs = vs + ((v*(pv/100))
leu = leu + ((l*(pl/100))
dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- ERROR:
File "XXXX", line 12
    leu = leu + ((l*(pl/100))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:25:45) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l

vs = vs + (v*(pv/100))
leu = leu + (l*(pl/100))
dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- OUTPUT:
1
357637.5
9625.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:26:52) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 
vs = v
leu = l
while(leu < 2*vs):
	vs = vs + (v*(pv/100))
	leu = leu + (l*(pl/100))
	dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- OUTPUT:
1
357637.5
9625.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:40) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 

while(l < 2*v):
	v = v + (v*(pv/100))
	l = l + (l*(pl/100))
	dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(vs)
NameError: name 'vs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:29:55) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 

while(l < 2*v):
	v = v + (v*(pv/100))
	l = l + (l*(pl/100))
	dia = dia + 1

print(dia)
print(vs)
print(leu)			  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(vs)
NameError: name 'vs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:30:21) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 

while(l < 2*v):
	v = v + (v*(pv/100))
	l = l + (l*(pl/100))
	dia = dia + 1

print(dia)
print(v)
print(l)			  
-- OUTPUT:
9
419029.3318731978
846652.3685455322
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:30:56) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 

while(l < 2*v):
	v = v + (v*(pv/100))
	l = l + (l*(pl/100))
	dia = dia + 1

print(dia)
		  
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:31:15) 
-- CODE:
# Quantidade inicial de cópias do vírus no sangue de Micaleteia.
v = int(input("Digite a quantidade inicial de copias do virus no sangue de Micaleteia: "))
l = int(input("Digite a quantidade inicial de leucocitos no sangue: "))
pv = float(input("Percentual de multiplicacao diaria do virus: "))
pl = float(input("Percentual de multiplicacao diaria dos leucocitos: "))

dia = 0 

while(l < 2*v):
	v = v + (v*(pv/100))
	l = l + (l*(pl/100))
	dia = dia + 1

print(dia)
		  
-- EXECUTION TIME:
0.122878
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
